--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Course Registration Form</h1>
 <form action="respond.html" autocomplete="">
     <fieldset>
-        <legend>Personal Legend</legend>
+        <legend>Personal Information</legend>
         <table>
             <tr>
                 <td><label for="">First Name</label></td>
@@ -19,7 +19,7 @@
             </tr>
     
             <tr>
-                <td><label for="">Email</label></td>6
+                <td><label for="">Email</label></td>
                 <td><input type="email" required name="" id =""></td>
             </tr>
             <tr>
